# tud_momana

./: CMakeLists.txt  README.md  package.xml
cfg/: rviz.rviz
cfg/camera_info/: README.txt  README.txt~  ardrone_ext_cam.yaml  cam_v0.1.yaml  cam_v0.2.yaml  cam_v0.3.yaml
include/tud_momana/: momananode.hpp  momanaodomnode.hpp  momaodomnode.hpp
launch/: ar_sys_multi_boards_external.launch  c3po.launch  c3po_robotino_nodes.launch  c3po_robotino_nodes.launch.launch;.xacro;.urdf  joystick_teleop_c3po.launch  joystick_teleop_r2d2.launch  just_camera.launch  just_momana.launch  minimal_moma.launch  momana.launch  momana_manual.launch  multi_robotino_navigation.launch  pitag_cobfiducials_crazyflie.launch  publish_calibrated_frames.launch  r2d2.launch  r2d2_robotino_nodes.launch  robotino_move_base.launch  test_img_prep.launch
launch/old/: old_pitag_detection_ardrone.launch  old_pitag_detection_ardrone_ext.launch
maps/: robotics_lab.pgm  robotics_lab.yaml  robotics_lab.yaml~
markers/aruco/ground_robots/: boards.yml
markers/aruco/ground_robots/c3po/board/: c3po_board.xcf
markers/aruco/ground_robots/r2d2/board/: r2d2_board.xcf
markers/aruco/ground_robots/r2d2/board/old_board/: board_r2d2.yml
markers/pitag/config/: crazfyflie.xml  fiducials_config.yaml
src/: joy_control.cpp  momana.cpp  momananode.cpp  momanaodom.cpp  momanaodomnode.cpp  momaodom.cpp  momaodomnode.cpp  robotino_joy_control.cpp
srv/: StartStopMomana.srv
